# tauri-plugin-gamepad

./: Cargo.toml  LICENSE  README.md  api-iife.js  build.rs  package.json  rollup.config.js  tsconfig.json
.changes/: config.json  initial-release.md  migrated-to-tauri-beta.md  readme.md
dist-js/: index.cjs  index.d.ts  index.js
examples/tauri-app/: package.json
examples/tauri-app-old/: package.json
examples/tauri-app-old/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs  main.rs
examples/tauri-app/src/routes/: +page.svelte
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: lib.rs  utils.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts  tsconfig.json
