[package]
name = "tauri-plugin-gamepad"
version = "0.0.2"
authors = [ "Eugene Hauptmann" ]
description = "A plugin for Tauri that provides a polyfill for Gamepad Web API that works on most common platforms."
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]
license-file = "LICENSE"
homepage = "https://developermindset.com/tauri-plugin-gamepad/"
repository = "https://github.com/eugenehp/tauri-plugin-gamepad"
readme = "README.md"
keywords = ["polyfill", "gamepad", "gilrs", "tauri", "joystick"]
categories = ["api-bindings","web-programming","simulation","os","game-development"]

[dependencies]
tauri = { version = "2.0.0-alpha" }
serde = "1.0"
thiserror = "1.0"
gilrs = {version = "0.10.4", features = ["serde-serialize"]}
serde_json = "1.0"
enum-iterator = "1.4.1"
uuid = "1.6.1"