[package]
name = "tauri-plugin-gamepad"
version = "0.0.5"
authors = [ "Eugene Hauptmann" ]
description = "A plugin for Tauri that provides a polyfill for Gamepad Web API that works on most common platforms."
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]
license-file = "LICENSE"
homepage = "https://developermindset.com/tauri-plugin-gamepad/"
repository = "https://github.com/DeveloperMindset-com/tauri-plugin-gamepad"
readme = "README.md"
keywords = ["polyfill", "gamepad", "gilrs", "tauri", "joystick"]
categories = ["api-bindings", "web-programming", "simulation", "os", "game-development"]
links = "tauri-plugin-gamepad"

[dependencies]
tauri = { version = "2.1.1" }
serde = "1.0"
thiserror = "2.0.4"
gilrs = { git = "https://github.com/eugenehp/gilrs.git", features = ["serde-serialize"]}
serde_json = "1.0"
enum-iterator = "2.1.0"
uuid = "1.6.1"

[build-dependencies]
tauri-plugin = {version = "2.0.3", features = ["build"]}